--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "date-fns": "^3.2.0",
     "date-fns-tz": "^3.0.0",
     "idb": "^8.0.0",
+    "react-draggable": "^4.4.6",
+    "react-resizable": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.5.0",
