--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "date-fns": "^3.2.0",
     "date-fns-tz": "^3.0.0",
     "idb": "^8.0.0",
-    "react-draggable": "^4.4.6",
-    "react-resizable": "^3.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-hotkeys-hook": "^4.5.0",
+    "react-resizable": "^3.0.4",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-resizable": "^3.0.8",
     "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
