--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-resizable": "^3.0.8",
     "@types/uuid": "^9.0.7",
+    "@vercel/node": "^5.5.28",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
